--- a/lpi701.md
+++ b/lpi701.md
@@ -1,3 +1,3 @@
-# <img src="images/lpi.png" width="30px"> LPI DevOps Tools Engineer - Exam 701 Objectives Preparation <img src="images/lpi.png" width="30px">
+## <img src="images/lpi.png" width="30px"> LPI DevOps Tools Engineer - Exam 701 Objectives Preparation <img src="images/lpi.png" width="30px">
 
-## Chapter 1: Introduction - Exam Blue Print
+### Chapter 1: Introduction - Exam Blue Print
