--- a/lpi701.md
+++ b/lpi701.md
@@ -1,3 +1,34 @@
 ## <img src="images/lpi.png" width="30px"> LPI DevOps Tools Engineer - Exam 701 Objectives Preparation <img src="images/lpi.png" width="30px">
 
-### Chapter 1: Introduction - Exam Blue Print
+#
+
+## Topic 701: Software Engineering
+
+### 701.1 Modern Software Development (weight: 6)
+
+**Weight:** 6
+
+**Description:** Candidates should be able to design software solutions suitable for modern runtime environments. Candidates should understand how services handle data persistence, sessions, status information, transactions, concurrency, security, performance, availability, scaling, load balancing, messaging, monitoring and APIs. Furthermore, candidates should understand the implications of agile and DevOps on software development.
+
+**Key Knowledge Areas:**
+
+- Understand and design service based applications
+- Understand common API concepts and standards
+- Understand aspects of data storage, service status and session handling
+- Design software to be run in containers
+- Design software to be deployed to cloud services
+- Awareness of risks in the migration and integration of monolithic legacy software
+- Understand common application security risks and ways to mitigate them
+- Understand the concept of agile software development
+- Understand the concept of DevOps and its implications to software developers and operators
+
+**The following is a partial list of the used files, terms and utilities:**
+
+- REST, JSON
+- Service Orientated Architectures (SOA)
+- Microservices
+- Immutable servers
+- Loose coupling
+- Cross site scripting, SQL injections, verbose error reports, API authentication, consistent enforcement of transport encryption
+- CORS headers and CSRF tokens
+- ACID properties and CAP theorem
