--- a/lpi701.md
+++ b/lpi701.md
@@ -1,7 +1,5 @@
 ## <img src="images/lpi.png" width="30px"> LPI DevOps Tools Engineer - Exam 701 Objectives Preparation <img src="images/lpi.png" width="30px">
 
-#
-
 ## Topic 701: Software Engineering
 
 ### 701.1 Modern Software Development (weight: 6)
@@ -32,3 +30,26 @@
 - Cross site scripting, SQL injections, verbose error reports, API authentication, consistent enforcement of transport encryption
 - CORS headers and CSRF tokens
 - ACID properties and CAP theorem
+
+### 701.2 Standard Components and Platforms for Software (weight: 2)
+
+**Weight:** 2
+
+**Description:** Candidates should understand services offered by common cloud platforms. They should be able to include these services in their application architectures and deployment toolchains and understand the required service configurations. OpenStack service components are used as a reference implementation.
+
+**Key Knowledge Areas:**
+
+- Features and concepts of object storage
+- Features and concepts of relational and NoSQL databases
+- Features and concepts of message brokers and message queues
+- Features and concepts of big data services
+- Features and concepts of application runtimes / PaaS
+- Features and concepts of content delivery networks
+
+The following is a partial list of the used files, terms and utilities:
+
+- OpenStack Swift
+- OpenStack Trove
+- OpenStack Zaqar
+- CloudFoundry
+- OpenShift
