--- a/lpi701.md
+++ b/lpi701.md
@@ -22,7 +22,7 @@
 
 **The following is a partial list of the used files, terms and utilities:**
 
-- REST, JSON
+- REST [[Flask](https://codeburst.io/this-is-how-easy-it-is-to-create-a-rest-api-8a25122ab1f3)] [[JSON](https://medium.com/codingthesmartway-com-blog/create-a-rest-api-with-json-server-36da8680136d)], JSON [[JSON](https://medium.com/python-pandemonium/json-the-python-way-91aac95d4041)]
 - Service Orientated Architectures (SOA)
 - Microservices
 - Immutable servers
