--- a/lpi701.md
+++ b/lpi701.md
@@ -24,7 +24,7 @@
 
 - REST [[Flask](https://codeburst.io/this-is-how-easy-it-is-to-create-a-rest-api-8a25122ab1f3)] [[JSON](https://medium.com/codingthesmartway-com-blog/create-a-rest-api-with-json-server-36da8680136d)], JSON [[JSON](https://medium.com/python-pandemonium/json-the-python-way-91aac95d4041)]
 - Service Orientated Architectures (SOA) [[link](https://koukia.ca/microservices-architecture-vs-service-oriented-architecture-soa-d016e3a309e6)] [[link](https://medium.com/@datawire/microservices-versus-soa-in-practice-62a817b86a20)]
-- Microservices
+- Microservices [[link](https://koukia.ca/microservices-architecture-vs-service-oriented-architecture-soa-d016e3a309e6)] [[link](https://medium.com/@datawire/microservices-versus-soa-in-practice-62a817b86a20)]
 - Immutable servers
 - Loose coupling
 - Cross site scripting, SQL injections, verbose error reports, API authentication, consistent enforcement of transport encryption
