--- a/lpi701.md
+++ b/lpi701.md
@@ -312,3 +312,31 @@ git
 - Service exploits, brute force attacks, and denial of service attacks
 - Security updates, packet filtering and application gateways
 - Virtualization hosts, DNS and load balancers
+
+#
+
+### 705.2 Log Management and Analysis (weight: 4)
+
+**Weight:** 4
+
+**Description:** Candidates should understand the role of log files in operations and troubleshooting. They should be able to set up centralized logging infrastructure based on Logstash to collect and normalize log data. Furthermore, candidates should understand how Elasticsearch and Kibana help to store and access log data.
+
+**Key Knowledge Areas:**
+
+- Understand how application and system logging works
+- Understand the architecture and functionality of Logstash, including the lifecycle of a log message and Logstash plugins
+- Understand the architecture and functionality of Elasticsearch and Kibana in the context of log data management (Elastic Stack)
+- Configure Logstash to collect, normalize, transform and store log data
+- Configure syslog and Filebeat to send log data to Logstash
+- Configure Logstash to send email alerts
+- Understand application support for log management
+
+**The following is a partial list of the used files, terms and utilities:**
+
+- logstash
+- input, filter, output
+- grok filter
+- Log files, metrics
+- syslog.conf
+- /etc/logstash/logstash.yml
+- /etc/filebeat/filebeat.yml
