--- a/lpi201.md
+++ b/lpi201.md
@@ -26,3 +26,7 @@
         loop1             2.29         2.49         0.00       3716          0
         xvda             10.24       219.48       170.96     326979     254688
       ```
+
+      - Good practices:
+
+        - `$ watch -n1 iostat` #Watch in realtime (1 second difference)
