--- a/lpi201.md
+++ b/lpi201.md
@@ -29,4 +29,4 @@
 
       - Good practices:
 
-        - `$ watch -n1 iostat` _Watch in realtime (1 second difference)_
+        - `$ watch -n1 iostat` _Watch the command results in realtime (1 second difference)_
