--- a/lpi201.md
+++ b/lpi201.md
@@ -30,3 +30,21 @@
       - Good practices:
 
         - `$ watch -n1 iostat` _Watch the command results in realtime (1 second difference)_
+
+#
+
+  - _netstat_
+
+    - It shows network statistics
+
+      - Options:
+
+        - `-n` - statistics without resolve hostnames
+
+        - `-t` - only stablished tcp connections
+
+        - `-u` - only stablished udp connections
+
+        - `-at` - all tcp connections
+
+        - `-ut` - all udp connections
