--- a/lpi201.md
+++ b/lpi201.md
@@ -4,32 +4,32 @@
 
 - **Commands:**
 
-  - _iostat_
+- _iostat_
 
-    - It shows disk IO statistics
+  - It shows disk IO statistics
 
-    - _apt install sysstat_
+  - _apt install sysstat_
 
-    - Use: `$ iostat`
+  - Use: `$ iostat`
 
-      - Example:
+    - Example:
 
-      ```
-        # iostat
-        Linux 4.15.0-1051-aws (ip-172-31-92-39) 	11/25/19 	_x86_64_	(1 CPU)
+    ```
+      # iostat
+      Linux 4.15.0-1051-aws (ip-172-31-92-39) 	11/25/19 	_x86_64_	(1 CPU)
 
-        avg-cpu:  %user   %nice %system %iowait  %steal   %idle
-                   2.47    0.01    0.91    0.64    0.70   95.28
+      avg-cpu:  %user   %nice %system %iowait  %steal   %idle
+                 2.47    0.01    0.91    0.64    0.70   95.28
 
-        Device             tps    kB_read/s    kB_wrtn/s    kB_read    kB_wrtn
-        loop0             7.83         8.48         0.00      12638          0
-        loop1             2.29         2.49         0.00       3716          0
-        xvda             10.24       219.48       170.96     326979     254688
-      ```
+      Device             tps    kB_read/s    kB_wrtn/s    kB_read    kB_wrtn
+      loop0             7.83         8.48         0.00      12638          0
+      loop1             2.29         2.49         0.00       3716          0
+      xvda             10.24       219.48       170.96     326979     254688
+    ```
 
-      - Good practices:
+    - Good practices:
 
-        - `$ watch -n1 iostat` _Watch the command results in realtime (1 second difference)_
+      - `$ watch -n1 iostat` _Watch the command results in realtime (1 second difference)_
 
 #
 
@@ -41,10 +41,28 @@
 
         - `-n` - statistics without resolve hostnames
 
-        - `-t` - only stablished tcp connections
+        - `-t` - only stablished TCP connections
 
-        - `-u` - only stablished udp connections
+        - `-u` - only stablished UDP connections
 
-        - `-at` - all tcp connections
+        - `-at` - all TCP connections
 
-        - `-ut` - all udp connections
+        - `-ut` - all UDP connections
+
+      - Good practices:
+
+        - `$ netstat -nat` _It shows all TCP connections without resolve hostnames_
+
+          ```
+            netstat -nat
+            Active Internet connections (servers and established)
+            Proto Recv-Q Send-Q Local Address           Foreign Address         State
+            tcp        0      0 127.0.0.53:53           0.0.0.0:*               LISTEN
+            tcp        0      0 0.0.0.0:22              0.0.0.0:*               LISTEN
+            tcp        0    316 172.31.92.39:22         186.192.87.1:10766      ESTABLISHED
+            tcp6       0      0 :::22                   :::*                    LISTEN
+          ```
+
+#
+
+            
