--- a/lpi201.md
+++ b/lpi201.md
@@ -15,7 +15,7 @@
     - Example:
 
     ```
-      # iostat
+      $ iostat
       Linux 4.15.0-1051-aws (ip-172-31-92-39) 	11/25/19 	_x86_64_	(1 CPU)
 
       avg-cpu:  %user   %nice %system %iowait  %steal   %idle
@@ -54,7 +54,7 @@
         - `$ netstat -nat` _It shows all TCP connections without resolve hostnames_
 
           ```
-            netstat -nat
+            $ netstat -nat
             Active Internet connections (servers and established)
             Proto Recv-Q Send-Q Local Address           Foreign Address         State
             tcp        0      0 127.0.0.53:53           0.0.0.0:*               LISTEN
@@ -64,5 +64,3 @@
           ```
 
 #
-
-            
