--- a/lpi201.md
+++ b/lpi201.md
@@ -63,4 +63,45 @@
             tcp6       0      0 :::22                   :::*                    LISTEN
           ```
 
+        - `$ sudo netstat -natp` _It shows all TCP connections without resolve hostnames and the process PID numbers_
+
+          ```
+            $ sudo netstat -natp
+            Active Internet connections (servers and established)
+            Proto Recv-Q Send-Q Local Address           Foreign Address         State       PID/Program name
+            tcp        0      0 127.0.0.53:53           0.0.0.0:*               LISTEN      651/systemd-resolve
+            tcp        0      0 0.0.0.0:22              0.0.0.0:*               LISTEN      1027/sshd
+            tcp        0    340 172.31.92.39:22         186.192.87.1:20214      ESTABLISHED 14550/sshd: ubuntu
+            tcp        0      0 172.31.92.39:22         186.192.87.1:10766      ESTABLISHED 1570/sshd: ubuntu [
+            tcp6       0      0 :::22                   :::*                    LISTEN      1027/sshd
+          ```  
+
 #
+
+- _w_
+
+  - It shows connected users
+
+  - Use: `$ w`
+
+    - Example:
+
+      ```
+        $ w
+        21:14:54 up 18 min,  1 user,  load average: 0.00, 0.03, 0.06
+        USER     TTY      FROM             LOGIN@   IDLE   JCPU   PCPU WHAT
+        ubuntu   pts/0    186.192.87.1     21:11    0.00s  0.03s  0.00s w
+      ```
+
+    - Good practices:
+
+      - `$ w -h` - It prints with no header
+
+      ```
+        $ w -h
+        ubuntu   pts/0    186.192.87.1     21:11    3.00s  0.03s  0.00s w -h
+      ```
+
+#
+
+      
