--- a/lpi201.md
+++ b/lpi201.md
@@ -182,3 +182,20 @@
           1574801780 boot time
                9680 forks
         ```
+
+      `$ vmstat -d` - It shows detailed disk statistics
+
+        ```
+          $ vmstat -d
+            disk- ------------reads------------ ------------writes----------- -----IO------
+                   total merged sectors      ms  total merged sectors      ms    cur    sec
+            loop0   3420      0    7451    2108      0      0       0       0      0      0
+            loop1   9655      0   21310   32732      0      0       0       0      0      0
+            loop2   7186      0   16362     420      0      0       0       0      0      0
+            loop3      5      0      16       0      0      0       0       0      0      0
+            loop4      0      0       0       0      0      0       0       0      0      0
+            loop5      0      0       0       0      0      0       0       0      0      0
+            loop6      0      0       0       0      0      0       0       0      0      0
+            loop7      0      0       0       0      0      0       0       0      0      0
+            xvda   16979    370 1065823   28684  33477  42644 2851152  539964      0     28
+        ```  
