--- a/lpi201.md
+++ b/lpi201.md
@@ -146,7 +146,14 @@
 
     - Good Practices:
 
-      `$ vmstat -s` - It shows summary memory statistics
-      `$ vmstat -d` - It shows detailed disk statistics
-      `$ vmstat -D` - It shows brief disk statistics
-      `$ vmstat -p /dev/<partition>` - It shows partition detailed statistics
+      - `$ vmstat -s` - It shows summary memory statistics
+
+      - `$ vmstat -d` - It shows detailed disk statistics
+
+      - `$ vmstat -D` - It shows brief disk statistics
+
+      - `$ vmstat -p /dev/<partition>` - It shows partition detailed statistics
+
+#
+
+- _pstree_
