--- a/lpi201.md
+++ b/lpi201.md
@@ -1,4 +1,4 @@
-# <img src="images/gnu-linux.png" width="30px"> Linux Network Administration <img src="images/gnu-linux.png" width="30px">
+# <img src="images/gnu-linux.png" width="30px"> Linux Engineer <img src="images/gnu-linux.png" width="30px">
 
 ## Capacity Planning
 
@@ -157,3 +157,35 @@
 #
 
 - _pstree_
+
+  - It shows the systemd process tree
+
+  - It shows the same of `$ ps -axf`
+
+    - Example:
+
+      ```
+        $ pstree
+  systemd─┬─accounts-daemon───2*[{accounts-daemon}]
+          ├─acpid
+          ├─2*[agetty]
+          ├─amazon-ssm-agen───7*[{amazon-ssm-agen}]
+          ├─atd
+          ├─cron
+          ├─dbus-daemon
+          ├─lvmetad
+          ├─lxcfs───2*[{lxcfs}]
+          ├─networkd-dispat───{networkd-dispat}
+          ├─polkitd───2*[{polkitd}]
+          ├─rsyslogd───3*[{rsyslogd}]
+          ├─snapd───8*[{snapd}]
+          ├─sshd───sshd───sshd───bash───pstree
+          ├─systemd───(sd-pam)
+          ├─systemd-journal
+          ├─systemd-logind
+          ├─systemd-network
+          ├─systemd-resolve
+          ├─systemd-timesyn───{systemd-timesyn}
+          ├─systemd-udevd
+          └─unattended-upgr───{unattended-upgr}
+      ```  
