--- a/lpi201.md
+++ b/lpi201.md
@@ -189,3 +189,21 @@
                 ├─systemd-udevd
                 └─unattended-upgr───{unattended-upgr}
       ```  
+#
+
+- _lsof_
+
+  - It shows all the files used by a process
+
+  - Good practices:
+
+    - `$ lsof -i 4` - will get you the list of IPv4 connections open
+
+    - `$ lsof -i 6` - will get you the list of IPv6 connections open
+
+#
+
+- _uptime_
+
+  - It shows server running information
+  
